--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -25,7 +25,7 @@
         <link rel="apple-touch-icon" sizes="152x152" href="/assets/images/govuk-apple-touch-icon-152x152.png">
         <link rel="apple-touch-icon" href="/assets/images/govuk-apple-touch-icon.png">
 
-        <link type="text/css" rel="stylesheet" href="/stylesheets/style.min.css"/>
+        <link type="text/css" rel="stylesheet" href="/stylesheets/style-{{ appVersion }}.min.css"/>
 
         <meta property="og:image" content="/assets/images/govuk-opengraph-image.png">
 
