--- a/server/views/match-manual.njk
+++ b/server/views/match-manual.njk
@@ -74,7 +74,7 @@
       <dl class="govuk-summary-list">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">Name</dt>
-          <dd class="govuk-summary-list__value">{{ defendantFullName | properCase | removeTitle }}</dd>
+          <dd class="govuk-summary-list__value">{{ defendantFullName | apostropheInName | properCase | removeTitle }}</dd>
         </div>
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">Date of birth</dt>
