--- a/server/views/match-defendant.njk
+++ b/server/views/match-defendant.njk
@@ -47,7 +47,7 @@
     (' ' + data.name.forename3 if data.name.forename3) +
     ' ' + data.name.surname) if data.name else data.defendantName %}
 
-  <h1 class="govuk-caption-l govuk-!-margin-top-0">{{ defendantFullName | properCase | removeTitle }}</h1>
+  <h1 class="govuk-caption-l govuk-!-margin-top-0">{{ defendantFullName | apostropheInName | properCase | removeTitle }}</h1>
   <h2 class="govuk-heading-l">Review possible NDelius records</h2>
   <p class="govuk-body">Compare details and confirm the correct record for the defendant.</p>
 
@@ -67,7 +67,7 @@
             <tbody class="govuk-table__body">
             <tr class="govuk-table__row">
               <th scope="row" class="govuk-table__header">Name</th>
-              <td class="govuk-table__cell">{{ defendantFullName | properCase | removeTitle }}</td>
+              <td class="govuk-table__cell">{{ defendantFullName | apostropheInName | properCase | removeTitle }}</td>
             </tr>
             <tr class="govuk-table__row">
               <th scope="row" class="govuk-table__header">Date of birth</th>
@@ -131,7 +131,7 @@
                           <th scope="row" class="govuk-table__header pac-width-40">Name</th>
                           <td class="govuk-table__cell">
                             {% set matchName = item.forename + ' ' + (item.middleNames | join(' ') + ' ' if item.middleNames) + item.surname %}
-                            {{ matchName | properCase | removeTitle | markMatches(defendantFullName) | safe }}
+                            {{ matchName | apostropheInName | properCase | removeTitle | markMatches(defendantFullName) | safe }}
                           </td>
                         </tr>
                         <tr class="govuk-table__row">
