🔒 encoide input and escape output for security
Signed-off-by: theDustRoom <paul.massey@digital.justice.gov.uk>

--- a/server/views/case-list.njk
+++ b/server/views/case-list.njk
@@ -152,7 +152,7 @@
     {% if params.notification and params.notification | length %}
         {% from "govuk/components/notification-banner/macro.njk" import govukNotificationBanner %}
         {{ govukNotificationBanner({
-            html: "<span class='govuk-notification-banner__heading'>" + params.notification + "</span>"
+            html: "<span class='govuk-notification-banner__heading'>" + params.notification | escape + "</span>"
         }) }}
     {% endif %}
 
