--- a/server/views/case-summary-record-order.njk
+++ b/server/views/case-summary-record-order.njk
@@ -181,6 +181,42 @@
                 </div>
             </div>
 
+            {% if communityData.custodyDetails %}
+                <h2 class="govuk-heading-m govuk-!-margin-top-8">Post release dates</h2>
+                <table class="govuk-table">
+                    <thead class="govuk-table__head">
+                    <tr class="govuk-table__row">
+                        <th scope="col" class="govuk-table__header">&nbsp;</th>
+                        <th scope="col" class="govuk-table__header">Start</th>
+                        <th scope="col" class="govuk-table__header">End</th>
+                    </tr>
+                    </thead>
+                    <tbody class="govuk-table__body">
+                    {% if communityData.custodyDetails.homeDetentionCurfewActualDate and communityData.custodyDetails.homeDetentionCurfewEndDate %}
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-table__header">Home detention curfew</td>
+                        <td class="govuk-table__cell">{{ moment(communityData.custodyDetails.homeDetentionCurfewActualDate, 'YYYY-MM-DD').format(displayDateFormat) }}</td>
+                        <td class="govuk-table__cell">{{ moment(communityData.custodyDetails.homeDetentionCurfewEndDate, 'YYYY-MM-DD').format(displayDateFormat) }}</td>
+                    </tr>
+                    {%  endif %}
+                    {% if communityData.custodyDetails.releaseDate and communityData.custodyDetails.licenceExpiryDate %}
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-table__header">License</td>
+                        <td class="govuk-table__cell">{{ moment(communityData.custodyDetails.releaseDate, 'YYYY-MM-DD').format(displayDateFormat) }}</td>
+                        <td class="govuk-table__cell">{{ moment(communityData.custodyDetails.licenceExpiryDate, 'YYYY-MM-DD').format(displayDateFormat) }}</td>
+                    </tr>
+                    {% endif %}
+                    {% if communityData.custodyDetails.topupSupervisionStartDate and communityData.custodyDetails.topupSupervisionExpiryDate %}
+                        <tr class="govuk-table__row">
+                            <td class="govuk-table__cell govuk-table__header">Post sentence supervision</td>
+                            <td class="govuk-table__cell">{{ moment(communityData.custodyDetails.topupSupervisionStartDate, 'YYYY-MM-DD').format(displayDateFormat) }}</td>
+                            <td class="govuk-table__cell">{{ moment(communityData.custodyDetails.topupSupervisionExpiryDate, 'YYYY-MM-DD').format(displayDateFormat) }}</td>
+                        </tr>
+                    {% endif %}
+                    </tbody>
+                </table>
+            {% endif %}
+
                 {% if communityData.licenceConditions | length %}
                     <h2 class="govuk-heading-m govuk-!-margin-top-8">Licence conditions</h2>
                     <ul class="govuk-list govuk-list--bullet qa-current-requirements-{{ loop.index0 }}">
