:pencil2: PIC-1577: fix typo
Signed-off-by: katie-cawthorne <katie.cawthorne@digital.justice.gov.uk>

--- a/server/views/case-summary-record-order.njk
+++ b/server/views/case-summary-record-order.njk
@@ -201,7 +201,7 @@
                     {%  endif %}
                     {% if communityData.custodyDetails.releaseDate and communityData.custodyDetails.licenceExpiryDate %}
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-table__header">License</td>
+                        <td class="govuk-table__cell govuk-table__header">Licence</td>
                         <td class="govuk-table__cell">{{ moment(communityData.custodyDetails.releaseDate, 'YYYY-MM-DD').format(displayDateFormat) }}</td>
                         <td class="govuk-table__cell">{{ moment(communityData.custodyDetails.licenceExpiryDate, 'YYYY-MM-DD').format(displayDateFormat) }}</td>
                     </tr>
