--- a/server/views/case-summary-record-order.njk
+++ b/server/views/case-summary-record-order.njk
@@ -162,7 +162,7 @@
                 </div>
                 <div class="govuk-grid-column-one-third">
                     <p class="govuk-hint govuk-!-margin-bottom-0 qa-elapsed-title">
-                        {% if custodialType === "In Custody"%}
+                        {% if inCustody %}
                             {{ "Status" }}
                         {% elseif custodialOrder.custodialType.code %}
                             {{ "Licence ends" if isOnLicence else "PSS ends" }}
@@ -171,7 +171,7 @@
                         {% endif %}
                     </p>
                     <p class="govuk-body-l govuk-!-font-weight-bold govuk-!-margin-0 qa-elapsed-time">
-                        {% if custodialType === "In Custody"%}
+                        {% if inCustody %}
                         {{ "In custody" }}
                         {% elseif custodialOrder %}
                             {{ moment(custodialOrder.licenceExpiryDate, 'YYYY-MM-DD').format(displayDateFormat) if isOnLicence else moment(custodialOrder.pssEndDate, 'YYYY-MM-DD').format(displayDateFormat) }}
