:loud_sound: add temp data dump
Signed-off-by: katie-cawthorne <katie.cawthorne@digital.justice.gov.uk>

--- a/server/views/case-summary-record-order.njk
+++ b/server/views/case-summary-record-order.njk
@@ -182,6 +182,8 @@
                 </div>
             </div>
 
+            <p> {{ communityData | dump }}</p>
+
             {% if communityData.custodyDetails | length %}
                 <h2 class="govuk-heading-m govuk-!-margin-top-8">Post release dates</h2>
                 <table class="govuk-table">
